@@ -40,6 +40,7 @@ Change Log:
 - Added 2 new currencies to Authorize.net AIM payment gateway (AUD and NZD)
 - Add filter so certain products can be excluded from GA tracking
 - Pass manual gateway instuctions through wpautop() and allow shortcodes in it
+- Remove encoded html from PayPal IPN strings http://wp.mu/7s9
 
 2.8.9 - 9/22/2013 - Aaron Edwards, Arnold, Marko Miljus
 ----------------------------------------------------------------------
